java 21, use apache instead of spring